fix typo in restrict-annotations policy
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/nginx_annotation_checks/restrict-annotations.yaml
+++ b/best-practices/nginx_annotation_checks/restrict-annotations.yaml
@@ -13,7 +13,7 @@ metadata:
     policies.kyverno.io/description: >-
       This policy mitigates CVE-2021-25746 by restricting `metadata.annotations` to safe values.
       See: https://github.com/kubernetes/ingress-nginx/blame/main/internal/ingress/inspector/rules.go.
-      This issue has been fixed in NGINX Ingress v1.2.0. For NGINX Ingress ersion 1.0.5+ the 
+      This issue has been fixed in NGINX Ingress v1.2.0. For NGINX Ingress version 1.0.5+ the 
       "annotation-value-word-blocklist" configuration setting is also recommended. 
       Please refer to the CVE for details. 
 spec:
