restore deleted subjects
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
+++ b/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
@@ -19,10 +19,14 @@ spec:
       any:
       - resources:
           kinds:
-          - "ConfigMap"
+          - ConfigMap
+        subjects:
+        - kind: ServiceAccount
+          name: developer
+          namespace: kube-system
       - resources:
           kinds:
-          - "ConfigMap"
+          - ConfigMap
         subjects:
         - kind: ServiceAccount
           name: another-developer
