--- a/best-practices/nginx_annotation_checks/restrict-annotations.yaml
+++ b/best-practices/nginx_annotation_checks/restrict-annotations.yaml
@@ -17,6 +17,7 @@ metadata:
       "annotation-value-word-blocklist" configuration setting is also recommended. 
       Please refer to the CVE for details. 
 spec:
+  validationFailureAction: enforce
   rules:
     - name: check-ingress
       match:
