--- a/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
+++ b/best-practices/nginx-custom-snippets/disallow-custom-snippets.yaml
@@ -4,8 +4,8 @@ metadata:
   name: disallow-ingress-nginx-custom-snippets
   annotations:
     policies.kyverno.io/title: Disallow Custom Snippets
-    policies.kyverno.io/category: Security
-    policies.kyverno.io/subject: ConfigMap, Ingress, NGINX Ingress
+    policies.kyverno.io/category: Security, NGINX Ingress
+    policies.kyverno.io/subject: ConfigMap, Ingress
     policies.kyverno.io/minversion: "1.6.0"
     kyverno.io/kyverno-version: "1.6.0"
     kyverno.io/kubernetes-version: "1.23"
