--- a/best-practices/nginx_annotation_checks/restrict-annotations.yaml
+++ b/best-practices/nginx_annotation_checks/restrict-annotations.yaml
@@ -4,9 +4,9 @@ metadata:
   name: restrict-annotations
   annotations:
     policies.kyverno.io/title: Restrict NGINX Ingress annotation values 
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/category: Security, NGINX Ingress
     policies.kyverno.io/severity: high
-    policies.kyverno.io/subject: Ingress, NGINX Ingress
+    policies.kyverno.io/subject: Ingress
     policies.kyverno.io/minversion: "1.6.0"
     kyverno.io/kyverno-version: "1.6.0"
     kyverno.io/kubernetes-version: "1.23"
