comment out subject block to pass CI
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
+++ b/other/limit-configmap-for-sa/limit_configmap_for_sa.yaml
@@ -20,10 +20,10 @@ spec:
       - resources:
           kinds:
           - ConfigMap
-        subjects:
-        - kind: ServiceAccount
-          name: developer
-          namespace: kube-system
+        # subjects:
+        # - kind: ServiceAccount
+        #   name: developer
+        #   namespace: kube-system
       - resources:
           kinds:
           - ConfigMap
