--- a/openshift/disallow-deprecated-apis/resources.yaml
+++ b/openshift/disallow-deprecated-apis/resources.yaml
@@ -3,9 +3,14 @@ kind: ClusterRole
 metadata:
   name: openshift-cluster-role-deprecated
 spec:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "watch", "list"]
+- apiGroups:
+  - ''
+  resources: 
+  - pods
+  verbs:
+  - get
+  - watch
+  - list
 ---
 apiVersion: authorization.openshift.io/v1
 kind: ClusterRoleBinding
