--- a/openshift/disallow-deprecated-apis/resources.yaml
+++ b/openshift/disallow-deprecated-apis/resources.yaml
@@ -3,14 +3,9 @@ kind: ClusterRole
 metadata:
   name: openshift-cluster-role-deprecated
 spec:
-- apiGroups:
-  - ""
-  resources: 
-  - pods
-  verbs:
-  - get
-  - watch
-  - list
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: authorization.openshift.io/v1
 kind: ClusterRoleBinding
@@ -25,14 +20,14 @@ roleRef:
   name: openshift-cluster-role-deprecated
   apiGroup: authorization.openshift.io/v1
 ---
-# apiVersion: authorization.openshift.io/v1
-# kind: Role
-# metadata:
-#   name: openshift-role-deprecated
-# spec:
-# - apiGroups: [""]
-#   resources: ["pods"]
-#   verbs: ["get", "watch", "list"]
+apiVersion: authorization.openshift.io/v1
+kind: Role
+metadata:
+  name: openshift-role-deprecated
+spec:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: authorization.openshift.io/v1
 kind: RoleBinding
@@ -48,14 +43,14 @@ roleRef:
   name: openshift-role-deprecated
   apiGroup: authorization.openshift.io/v1
 ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: ClusterRole
-# metadata:
-#   name: openshift-cluster-role-valid
-# spec:
-# - apiGroups: [""]
-#   resources: ["pods"]
-#   verbs: ["get", "watch", "list"]
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: openshift-cluster-role-valid
+spec:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -70,14 +65,14 @@ roleRef:
   name: openshift-cluster-role
   apiGroup: rbac.authorization.k8s.io/v1
 ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: Role
-# metadata:
-#   name: openshift-role
-# spec:
-# - apiGroups: [""]
-#   resources: ["pods"]
-#   verbs: ["get", "watch", "list"]
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: openshift-role
+spec:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
