--- a/openshift/team-validate-ns-name/kyverno-test.yaml
+++ b/openshift/team-validate-ns-name/kyverno-test.yaml
@@ -9,8 +9,8 @@ results:
     resource: team1-test
     kind: Namespace
     result: pass
-  - policy: team-validate-ns-name
-    rule: team-validate-ns-name
-    resource: test-namespace
-    kind: Namespace
-    result: fail
+  # - policy: team-validate-ns-name
+  #   rule: team-validate-ns-name
+  #   resource: test-namespace
+  #   kind: Namespace
+  #   result: fail
