add apiVersion to all generate policies
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/add_ns_quota.yaml
+++ b/best-practices/add_ns_quota.yaml
@@ -20,6 +20,7 @@ spec:
         kinds:
         - Namespace
     generate:
+      apiVersion: v1
       kind: ResourceQuota
       name: default-resourcequota
       synchronize: true
@@ -37,6 +38,7 @@ spec:
         kinds:
         - Namespace
     generate:
+      apiVersion: v1
       kind: LimitRange
       name: default-limitrange
       synchronize: true
