--- a/other/sync_secrets.yaml
+++ b/other/sync_secrets.yaml
@@ -21,6 +21,7 @@ spec:
         kinds:
         - Namespace
     generate:
+      apiVersion: v1
       kind: Secret
       name: regcred
       namespace: "{{request.object.metadata.name}}"
