update description with blog post link
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
+++ b/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
@@ -14,7 +14,8 @@ metadata:
       A ClusterRole with nodes/proxy resource access allows a user to
       perform anything the kubelet API allows. It also allows users to bypass
       the API server and talk directly to the kubelet potentially circumventing
-      audits and admission controllers. This policy prevents the creation
+      audits and admission controllers. See https://blog.aquasec.com/privilege-escalation-kubernetes-rbac
+      for more info. This policy prevents the creation
       of a ClusterRole if it contains the nodes/proxy resource. 
 spec:
   validationFailureAction: audit
