--- a/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
+++ b/other/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
@@ -6,7 +6,7 @@ metadata:
     policies.kyverno.io/title: Restrict ClusterRole with Nodes Proxy
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: ClusterRole
+    policies.kyverno.io/subject: ClusterRole, RBAC
     kyverno.io/kyverno-version: 1.7.0
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
