--- a/other/restrict-wildcard-resources/restrict-wildcard-resources.yaml
+++ b/other/restrict-wildcard-resources/restrict-wildcard-resources.yaml
@@ -1,33 +1,34 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: restrict-clusterrole-wildcard
+  name: restrict-wildcard-resources
   annotations:
-    policies.kyverno.io/title: Restrict ClusterRole with Wildcards
+    policies.kyverno.io/title: Restrict Wildcards in Resources
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/subject: ClusterRole, RBAC
+    policies.kyverno.io/subject: ClusterRole, Role, RBAC
     kyverno.io/kyverno-version: 1.7.0
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
-      A ClusterRole with wildcard resource access allows anything
-      under the specified API group to be covered. This can lead to
-      far too broad of permissions and should be carefully controlled.
-      This policy enforces that any ClusterPolicy does not use a wildcard
-      under resources.
+      Wildcards ('*') in resources grants access to all of the resources referenced by
+      the given API group and does not follow the principal of least privilege. As much as possible,
+      avoid such open resources unless scoped to perhaps a custom API group.
+      This policy blocks any Role or ClusterRole that contains a wildcard entry in
+      the resources list found in any rule.
 spec:
   validationFailureAction: audit
   background: true
   rules:
-    - name: clusterrole-wildcard
+    - name: wildcard-resources
       match:
         any:
         - resources:
             kinds:
+              - Role
               - ClusterRole
       validate:
-        message: "A ClusterRole using a wildcard for resources is not allowed."
+        message: "Use of a wildcard ('*') in any resources is forbidden."
         deny:
           conditions:
             any:
