--- a/other/restrict-wildcard-resources/restrict-wildcard-resources.yaml
+++ b/other/restrict-wildcard-resources/restrict-wildcard-resources.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-wildcard-resources
   annotations:
     policies.kyverno.io/title: Restrict Wildcards in Resources
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Security
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ClusterRole, Role, RBAC
     kyverno.io/kyverno-version: 1.7.0
