--- a/other/restrict_ingress_defaultbackend/restrict_ingress_defaultbackend.yaml
+++ b/other/restrict_ingress_defaultbackend/restrict_ingress_defaultbackend.yaml
@@ -24,7 +24,7 @@ spec:
   - name: restrict-ingress-defaultbackend
     match:
       any:
-        resources:
+      - resources:
           kinds:
           - Ingress
     validate:
