--- a/other/restrict_ingress_defaultbackend/restrict_ingress_defaultbackend.yaml
+++ b/other/restrict_ingress_defaultbackend/restrict_ingress_defaultbackend.yaml
@@ -6,9 +6,9 @@ metadata:
     policies.kyverno.io/title: Restrict Ingress defaultBackend
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/severity: high
-    kyverno.io/kyverno-version: 1.6.0
+    kyverno.io/kyverno-version: 1.6.2
     policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.19-1.24"
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/description: >-
       An Ingress with no rules sends all traffic to a single default backend. The defaultBackend
