--- a/flux/generate-flux-multi-tenant-resources/generate-flux-multi-tenant-resources.yaml
+++ b/flux/generate-flux-multi-tenant-resources/generate-flux-multi-tenant-resources.yaml
@@ -5,6 +5,9 @@ metadata:
   annotations:
     policies.kyverno.io/title: Generate Flux Multi-Tenant Resources
     policies.kyverno.io/category: Flux
+    kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.0
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: ServiceAccount, RoleBinding
     policies.kyverno.io/description: >-
       As part of the tenant provisioning process, Flux needs to generate RBAC resources. This policy
