--- a/other/create_default_pdb/create_default_pdb.yaml
+++ b/other/create_default_pdb/create_default_pdb.yaml
@@ -3,13 +3,25 @@ kind: Policy
 metadata:
   name: create-default-pdb
   namespace: hello-world
+  annotations:
+    policies.kyverno.io/title: Add Pod Disruption Budget
+    policies.kyverno.io/category: Sample
+    policies.kyverno.io/subject: Deployment, Pod
+    policies.kyverno.io/description: >-
+      A PodDisruptionBudget limits the number of Pods of a replicated application that
+      are down simultaneously from voluntary disruptions. For example, a quorum-based
+      application would like to ensure that the number of replicas running is never brought
+      below the number needed for a quorum. As an application owner, you can create a PodDisruptionBudget (PDB)
+      for each application. This policy will create a PDB resource whenever a new Deployment is created
+      in hello-world namespace only.
 spec:
   rules:
   - name: create-default-pdb
     match:
-      resources:
-        kinds:
-        - Deployment
+      any:
+      - resources:
+          kinds:
+          - Deployment
     generate:
       apiVersion: policy/v1
       kind: PodDisruptionBudget
