--- a/kasten/k10-3-2-1-backup/k10-3-2-1-backup.yaml
+++ b/kasten/k10-3-2-1-backup/k10-3-2-1-backup.yaml
@@ -5,17 +5,23 @@ metadata:
   annotations:
     policies.kyverno.io/title: Check 3-2-1 Backup Policy
     policies.kyverno.io/category: Kasten K10 by Veeam
+    policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.2
+    kyverno.io/kubernetes-version: "1.22"
     policies.kyverno.io/subject: Policy
     policies.kyverno.io/description: >-
-      The rule of 3-2-1 recommends that you have at least 3 copies of data, on 2 different storage targets, and 1 being "offsite"
-      In K8s/K10, this translates to the original StatefulSet (the original PersistentVolumeClaim), a backup (a snapshot of the PVC),
-      and an export to cloud object storage (a cloud copy of the PVC snapshot).
+      The rule of 3-2-1 recommends that you have at least 3 copies of data, on 2 different storage targets, and 1 being offsite. 
+      3-2-1 ensures a health mix of redundancy options for data recovery of the application for localized & multi-region cloud failures or compromise.
+      In K8s/K10, this translates to the original StatefulSet (the original PersistentVolumeClaim), a backup (a snapshot of the PVC on prod storage),
+      and an export to cloud object storage (a secondary cloud copy of the PVC snapshot).
 spec:
   validationFailureAction: audit  
   rules:
   - name: k10-3-2-1-backup-policy
     match:
-      resources:
+      any:
+      - resources:
           kinds:
           - config.kio.kasten.io/v1alpha1/Policy
     validate:
