--- a/kasten/k10-data-protection-by-label/k10-check-data-protection-by-label.yaml
+++ b/kasten/k10-data-protection-by-label/k10-check-data-protection-by-label.yaml
@@ -5,6 +5,9 @@ metadata:
   annotations:
     policies.kyverno.io/title: Check Data Protection By Label
     policies.kyverno.io/category: Kasten K10 by Veeam
+    kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.2
+    kyverno.io/kubernetes-version: "1.21-1.22"
     policies.kyverno.io/subject: Deployment, StatefulSet
     policies.kyverno.io/description: >-
       Check the 'dataprotection' label that production Deployments and StatefulSet have a named K10 Policy.
@@ -14,7 +17,8 @@ spec:
   rules:
   - name: k10-data-protection-by-label
     match:
-      resources:
+      any: 
+      - resources:
         kinds:
         - Deployment
         - StatefulSet
