--- a/kasten/k10-3-2-1-backup/k10-3-2-1-backup.yaml
+++ b/kasten/k10-3-2-1-backup/k10-3-2-1-backup.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.6.2
     policies.kyverno.io/minversion: 1.6.2
-    kyverno.io/kubernetes-version: "1.22"
+    kyverno.io/kubernetes-version: "1.21-1.22"
     policies.kyverno.io/subject: Policy
     policies.kyverno.io/description: >-
       The rule of 3-2-1 recommends that you have at least 3 copies of data, on 2 different storage targets, and 1 being offsite. 
