--- a/kasten/k10-immutable-location-profile/k10-immutable-backup.yaml
+++ b/kasten/k10-immutable-location-profile/k10-immutable-backup.yaml
@@ -5,6 +5,9 @@ metadata:
   annotations:
     policies.kyverno.io/title: Check Immutable Location Profile
     policies.kyverno.io/category: Kasten K10 by Veeam
+    kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.2
+    kyverno.io/kubernetes-version: "1.21-1.22"
     policies.kyverno.io/subject: Profile
     policies.kyverno.io/description: >-
       K10 Object Storage Location Profiles store K10 RestorePoints (App Backups) for import and export operations.
@@ -16,9 +19,10 @@ spec:
   rules:
   - name: k10-immutable-location-profile
     match:
-      resources:
-        kinds:
-        - config.kio.kasten.io/v1alpha1/Profile
+      any: 
+      - resources:
+          kinds:
+          - config.kio.kasten.io/v1alpha1/Profile
     validate:
       message: "Location Profile is not immutable (err: did not configure 'protectionPeriod')"
       pattern:
