--- a/kasten/k10-minimum-retention/k10-override-minimum-retentions.yaml
+++ b/kasten/k10-minimum-retention/k10-override-minimum-retentions.yaml
@@ -5,6 +5,9 @@ metadata:
   annotations:
     policies.kyverno.io/title: Minimum Backup Retention
     policies.kyverno.io/category: Kasten K10
+    kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.2
+    kyverno.io/kubernetes-version: "1.21-1.22"
     policies.kyverno.io/subject: Policy
     policies.kyverno.io/description: >-
       K10 Policy resources can be validated to adhere to common compliance retention standards. 
