--- a/other/add_default_resources/kyverno-test.yaml
+++ b/other/add_default_resources/kyverno-test.yaml
@@ -7,8 +7,14 @@ variables: values.yaml
 results:
   - policy: add-default-resources
     rule: add-default-requests
-    resource: nginx-demo
-    patchedResource: patchedResource.yaml
+    resource: nginx-demo1
+    patchedResource: patchedResource1.yaml
     kind: Pod
     result: pass
-
+# nginx-demo2 will get skip as resource already has memory and cpu requests
+  - policy: add-default-resources
+    rule: add-default-requests
+    resource: nginx-demo2
+    patchedResource: patchedResource2.yaml
+    kind: Pod
+    result: skip
