--- a/other/add_default_resources/patchedResource2.yaml
+++ b/other/add_default_resources/patchedResource2.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-demo
+  name: nginx-demo2
 spec:
   containers:
   - name: nginx
-    image: nginx:1.14.2
+    image: nginx:latest
     resources:
       requests:
-        memory: "100Mi" 
-        cpu: "100m"
+        memory: "200Mi" 
+        cpu: "200m"
