Remove namespace from description
Signed-off-by: Shubham Nazare <shubham4443@gmail.com>

--- a/other/create_default_pdb/create_default_pdb.yaml
+++ b/other/create_default_pdb/create_default_pdb.yaml
@@ -13,8 +13,7 @@ metadata:
       are down simultaneously from voluntary disruptions. For example, a quorum-based
       application would like to ensure that the number of replicas running is never brought
       below the number needed for a quorum. As an application owner, you can create a PodDisruptionBudget (PDB)
-      for each application. This policy will create a PDB resource whenever a new Deployment is created
-      in hello-world namespace only.
+      for each application. This policy will create a PDB resource whenever a new Deployment is created.
 spec:
   rules:
   - name: create-default-pdb
