--- a/other/add-image-as-env-var/add-image-as-env-var.yaml
+++ b/other/add-image-as-env-var/add-image-as-env-var.yaml
@@ -9,6 +9,8 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.4.3
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod, Deployment
     policies.kyverno.io/description: >-
       The Kubernetes downward API only has the ability to express so many
