--- a/other/mitigate_log4shell/mitigate_log4shell.yaml
+++ b/other/mitigate_log4shell/mitigate_log4shell.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     policies.kyverno.io/title: Log4Shell Mitigation
     policies.kyverno.io/subject: Pod
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/category: Sample
     policies.kyverno.io/description: >-
       In response to CVE-2021-44228 referred to as Log4Shell, a RCE vulnerability in the Log4j library, a
