--- a/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
+++ b/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
@@ -6,6 +6,8 @@ metadata:
     policies.kyverno.io/title: Mutate termination Grace Periods Seconds
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods with large terminationGracePeriodSeconds (tGPS) might prevent cluster nodes
