Add recently tested and confirmed kyverno version
Signed-off-by: Shubham Nazare <shubham4443@gmail.com>

--- a/other/create_default_pdb/create_default_pdb.yaml
+++ b/other/create_default_pdb/create_default_pdb.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add Pod Disruption Budget
     policies.kyverno.io/category: Sample
+    kyverno.io/kyverno-version: 1.6.2
     policies.kyverno.io/subject: Deployment
     policies.kyverno.io/description: >-
       A PodDisruptionBudget limits the number of Pods of a replicated application that
