added few minor changes
Signed-off-by: oshi36 <oshiagupta36@gmail.com>

--- a/other/check_nvidia_gpu/kyverno-test.yaml
+++ b/other/check_nvidia_gpu/kyverno-test.yaml
@@ -12,7 +12,7 @@ results:
     rule: check-nvidia-gpus
     resource: goodpod01
     kind: Pod
-    result: pass
+    result: fail
   
   - policy: check-nvidia-gpus
     rule: check-nvidia-gpus
