--- a/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
+++ b/other/ensure_readonly_hostpath/ensure_readonly_hostpath.yaml
@@ -7,6 +7,8 @@ metadata:
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.5.0
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods which are allowed to mount hostPath volumes in read/write mode pose a security risk
