--- a/other/require_netpol/require_netpol.yaml
+++ b/other/require_netpol/require_netpol.yaml
@@ -6,6 +6,8 @@ metadata:
     policies.kyverno.io/title: Require NetworkPolicy
     policies.kyverno.io/category: Sample
     policies.kyverno.io/minversion: 1.3.6
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Deployment, NetworkPolicy
     policies.kyverno.io/description: >-
       NetworkPolicy is used to control Pod-to-Pod communication
