--- a/other/require_pdb/require_pdb.yaml
+++ b/other/require_pdb/require_pdb.yaml
@@ -6,6 +6,8 @@ metadata:
     policies.kyverno.io/title: Require PodDisruptionBudget
     policies.kyverno.io/category: Sample
     policies.kyverno.io/minversion: 1.3.6
+    kyverno.io/kyverno-version: 1.6.2
+    kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/subject: Deployment, PodDisruptionBudget
     policies.kyverno.io/description: >-
       PodDisruptionBudget resources are useful to ensuring minimum availability
