--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           git clone https://github.com/kyverno/kyverno --branch $GIT_BRANCH
 
       - name: Set up Go 
-        uses: actions/setup-go@b22fbbc2921299758641fab08929b4ac52b32923 # v3.1.0
+        uses: actions/setup-go@b22fbbc2921299758641fab08929b4ac52b32923
         with:
           go-version: 1.17
 
