--- a/other/unique-ingress-paths.yaml
+++ b/other/unique-ingress-paths.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Ingress
-    policies.kyverno.io/minversion: 1.3.6
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
       Just like the need to ensure uniqueness among Ingress hosts, there is a need to have the paths
       be unique as well. This policy checks an incoming Ingress to ensure its root path does not conflict with another
@@ -21,9 +21,10 @@ spec:
   rules:
     - name: check-path
       match:
-        resources:
-          kinds:
-            - Ingress
+        any:
+        - resources:
+            kinds:
+              - Ingress
       context:
         # Looks up the Ingress paths across the whole cluster.
         - name: allpaths
@@ -36,20 +37,21 @@ spec:
             urlPath: "/apis/networking.k8s.io/v1/namespaces/{{request.object.metadata.namespace}}/ingresses"
             jmesPath: "items[].spec.rules[].http.paths[].path"
       preconditions:
+        any:
         - key: "{{request.operation}}"
           operator: Equals
           value: "CREATE"
       validate:
         message: >-
-          The root path /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/ exists
+          The root path /{{request.object.spec.rules[].http.paths[].path | [0] | to_string(@) | split(@, '/') | [1]}} exists
           in another Ingress rule elsewhere in the cluster.
         deny:
           conditions:
             all:
               # Deny if the root path of the request exists somewhere else in the cluster other than the same Namespace.
-              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/
-                operator: In
+              - key: /{{request.object.spec.rules[].http.paths[].path | [0] | to_string(@) | split(@, '/') | [1]}}
+                operator: AnyIn
                 value: "{{allpaths}}"
-              - key: /{{request.object.spec.rules[].http.paths[].path | to_string(@) | split(@, '/') | [1]}}/
-                operator: NotIn
+              - key: /{{request.object.spec.rules[].http.paths[].path | [0] | to_string(@) | split(@, '/') | [1]}}
+                operator: AnyNotIn
                 value: "{{nspath}}"
