--- a/other/create_default_pdb/create_default_pdb.yaml
+++ b/other/create_default_pdb/create_default_pdb.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Add Pod Disruption Budget
     policies.kyverno.io/category: Sample
     kyverno.io/kyverno-version: 1.6.2
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/subject: Deployment
     policies.kyverno.io/description: >-
       A PodDisruptionBudget limits the number of Pods of a replicated application that
