folding block to prevent Hugo render failures
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/openshift/unique-routes/unique-routes.yaml
+++ b/openshift/unique-routes/unique-routes.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.20"
     policies.kyverno.io/subject: Route
-    policies.kyverno.io/description: |-
+    policies.kyverno.io/description: >-
       An Route host is a URL at which services may be made available externally. In most cases,
       these hosts should be unique across the cluster to ensure no routing conflicts occur.
       This policy checks an incoming Route resource to ensure its hosts are unique to the cluster.
