add annotations to Velero policy
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/velero/validate-cron-schedule/validate-cron-schedule.yaml
+++ b/velero/validate-cron-schedule/validate-cron-schedule.yaml
@@ -2,6 +2,13 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: validate-cron-schedule
+  annotations:
+    policies.kyverno.io/title: Validate Schedule
+    policies.kyverno.io/category: Velero
+    policies.kyverno.io/subject: Schedule
+    policies.kyverno.io/description: >-
+      A Velero Schedule is given in Cron format and must be accurate to ensure
+      operation. This policy validates that the schedule is a valid Cron format.
 spec:
   background: true
   validationFailureAction: audit
