--- a/other/generate_networkpolicy_existing/generate-networkpolicy-existing.yaml
+++ b/other/generate_networkpolicy_existing/generate-networkpolicy-existing.yaml
@@ -27,6 +27,7 @@ spec:
           - Namespace
     generate:
       kind: NetworkPolicy
+      apiVersion: networking.k8s.io/v1
       name: default-deny
       namespace: "{{request.object.metadata.name}}"
       synchronize: true
