fix(require-base-image): use type docker-image for buildkit
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/other/require-base-image/require-base-image.yaml
+++ b/other/require-base-image/require-base-image.yaml
@@ -44,7 +44,7 @@ spec:
             reference: "{{ element.image }}"
         - name: mobysource
           variable:
-            jmesPath: imageData.configData."moby.buildkit.buildinfo.v1" | base64_decode(@).parse_json(@) | sources[].ref | length(@)
+            jmesPath: imageData.configData."moby.buildkit.buildinfo.v1" | base64_decode(@).parse_json(@) | sources[?type == 'docker-image'].ref | length(@)
             default: 0
         - name: ocisourcelabels
           variable:
