--- a/other/require_imagepullsecrets/kyverno-test.yaml
+++ b/other/require_imagepullsecrets/kyverno-test.yaml
@@ -1,11 +1,21 @@
 name: require-imagepullsecrets
 policies:
-  -  require_imagepullsecrets.yaml
+  - require_imagepullsecrets.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
   - policy: require-imagepullsecrets
     rule: check-for-image-pull-secrets
-    resource: myapp-pod
+    resource: goodpod01
     kind: Pod
     result: pass
+  - policy: require-imagepullsecrets
+    rule: check-for-image-pull-secrets
+    resource: badpod01
+    kind: Pod
+    result: fail
+  - policy: require-imagepullsecrets
+    rule: check-for-image-pull-secrets
+    resource: skippod01
+    kind: Pod
+    result: skip
