Added namespace field and reverse the resources
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/ensure-production-matches-staging/kyverno-test.yaml
+++ b/other/ensure-production-matches-staging/kyverno-test.yaml
@@ -9,15 +9,18 @@ results:
     rule: require-staging-deployment
     resource: deploy1
     kind: Deployment
+    namespace: staging
     result: skip
   - policy: ensure-production-matches-staging
     rule: require-same-image
     resource: deploy1
     kind: Deployment
+    namespace: staging
     result: skip  
   - policy: ensure-production-matches-staging
     rule: require-same-or-older-imageversion
     resource: deploy1
     kind: Deployment
+    namespace: staging
     result: skip    
   
