--- a/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token/restrict_automount_sa_token.yaml
@@ -22,6 +22,11 @@ spec:
       resources:
         kinds:
         - Pod
+    preconditions:
+      all:
+      - key: "{{ request.\"object\".metadata.labels.\"app.kubernetes.io/part-of\" || '' }}"
+        operator: NotEquals
+        value: policy-reporter
     validate:
       message: "Auto-mounting of Service Account tokens is not allowed."
       pattern:
