--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,16 +20,12 @@ jobs:
           path: policies
 
       - name: Clone Kyverno
-        run: |
-          if [[ ${{ github.event_name }} == "push" ]]
-          then
-            GIT_BRANCH=${GITHUB_REF##*/}
-          elif [[ ${{ github.event_name }} == "pull_request" ]]
-          then
-            GIT_BRANCH=${{ github.event.pull_request.base.ref }}
-          fi
-
-          git clone https://github.com/kyverno/kyverno --branch $GIT_BRANCH
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
+        with:
+          repository: kyverno/kyverno
+          path: kyverno
+          # The target branch of a pull request or the branch/tag of a push
+          ref: ${{ github.base_ref || github.ref_name }}
 
       - name: Set up Go 
         uses: actions/setup-go@b22fbbc2921299758641fab08929b4ac52b32923
@@ -37,6 +33,5 @@ jobs:
           go-version: 1.17
 
       - name: Test Policy
-        run: |
-          cd kyverno
-          go run cmd/cli/kubectl-kyverno/main.go test ../policies
+        run: go run cmd/cli/kubectl-kyverno/main.go test ../policies
+        working-directory: kyverno
