Run Kyverno by package name rather than file name
Go has been able to run a directory since 1.11, which is a little more
robust than running a single file. The upstream project may now add or
rename files without disrupting this workflow.

See: https://go.dev/doc/go1.11#run
Signed-off-by: Chris Bandy <bandy.chris@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
           go-version: 1.17
 
       - name: Test Policy
-        run: go run cmd/cli/kubectl-kyverno/main.go test ../policies
+        run: go run ./cmd/cli/kubectl-kyverno test ../policies
         working-directory: kyverno
