--- a/other/ingress_host_match_tls/kyverno-test.yaml
+++ b/other/ingress_host_match_tls/kyverno-test.yaml
@@ -6,12 +6,31 @@ resources:
 results:
   - policy: ingress-host-match-tls
     rule: host-match-tls
-    resource: tls-good-ingress
+    resource: badingress01
+    result: fail
     kind: Ingress
-    result: pass
   - policy: ingress-host-match-tls
     rule: host-match-tls
-    resource: tls-bad-ingress
-    kind: Ingress
+    resource: badingress02
     result: fail
-  
+    kind: Ingress
+  - policy: ingress-host-match-tls
+    rule: host-match-tls
+    resource: goodingress01
+    result: pass
+    kind: Ingress
+  - policy: ingress-host-match-tls
+    rule: host-match-tls
+    resource: goodingress02
+    result: pass
+    kind: Ingress
+  - policy: ingress-host-match-tls
+    rule: host-match-tls
+    resource: goodingress03
+    result: pass
+    kind: Ingress
+  - policy: ingress-host-match-tls
+    rule: host-match-tls
+    resource: goodingress04
+    result: pass
+    kind: Ingress
