updated status/result from skip to error for non-assigned variables in the policy
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/cert-manager/limit-duration/resource.yaml
+++ b/cert-manager/limit-duration/resource.yaml
@@ -51,6 +51,7 @@ spec:
   dnsNames:
   - example.com
   issuerRef:
-    name: acme-prod
+    name: letsencrypt-test
     kind: Issuer
     group: cert-manager.io
+  duration: 2164h0m0s
