Fix issue in restrict-binding-clusteradmin Policy #365
Signed-off-by: dschunack <dschunack@web.de>

--- a/other/restrict-binding-clusteradmin/restrict-binding-clusteradmin.yaml
+++ b/other/restrict-binding-clusteradmin/restrict-binding-clusteradmin.yaml
@@ -29,4 +29,5 @@ spec:
       validate:
         message: "Binding to cluster-admin is not allowed."
         pattern:
-          roleRef: "!cluster-admin"
+          roleRef: 
+            name: "!cluster-admin"
