fix(ingress_host_match_tls): skip failure on missing values
Signed-off-by: GitHub <noreply@github.com>

--- a/other/ingress_host_match_tls/ingress-host-match-tls.yaml
+++ b/other/ingress_host_match_tls/ingress-host-match-tls.yaml
@@ -36,6 +36,6 @@ spec:
       deny:
         conditions:
           all:
-          - key: "{{sort(request.object.spec.rules[].host)}}"
+          - key: "{{ (request.object.spec.rules[].host || `[]`) | sort(@) }}"
             operator: AllNotIn
-            value: "{{sort(request.object.spec.tls[].hosts[])}}"
+            value: "{{ (request.object.spec.tls[].hosts[] || `[]`) | sort(@) }}"
