Revert "updated status/result from skip to error for non-assigned variables in the policy (#356)"
This reverts commit 99c584843a81b4d7a4385aa4db51191315220bd4.

--- a/cert-manager/limit-duration/resource.yaml
+++ b/cert-manager/limit-duration/resource.yaml
@@ -51,7 +51,6 @@ spec:
   dnsNames:
   - example.com
   issuerRef:
-    name: letsencrypt-test
+    name: acme-prod
     kind: Issuer
     group: cert-manager.io
-  duration: 2164h0m0s
