--- a/other/create_pod_antiaffinity/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity/create_pod_antiaffinity.yaml
@@ -19,7 +19,7 @@ spec:
           kinds:
             - Deployment
       preconditions:
-        # This precondition selects Pods with the label `
+        # This precondition selects Pods with the label `app` defined
         all:
         - key: "{{request.object.spec.template.metadata.labels.app}}"
           operator: NotEquals
