--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           ref: ${{ github.base_ref || github.ref_name }}
 
       - name: Set up Go 
-        uses: actions/setup-go@f6164bd8c8acb4a71fb2791a8b6c4024ff038dab # 3.0.0
+        uses: actions/setup-go@268d8c0ca0432bb2cf416faae41297df9d262d7f
         with:
           go-version: 1.18
 
