KubeVirt: Shuffle names for pattern alignment
Shuffle some dir and filenames in order to align to the broader naming conventions.

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/kubevirt/enforce-instancetype/enforce-instancetype.yaml
+++ b/kubevirt/enforce-instancetype/enforce-instancetype.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: k6t-require-instancetype
+  name: k6t-enforce-instancetype
   annotations:
-    policies.kyverno.io/title: Require instanceType
+    policies.kyverno.io/title: Enforce instanceTypes
     policies.kyverno.io/category: KubeVirt
     policies.kyverno.io/subject: VirtualMachine
     policies.kyverno.io/description: >-
