add Kubernetes Version Check
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/label_existing_namespaces/label_existing_namespaces.yaml
+++ b/other/label_existing_namespaces/label_existing_namespaces.yaml
@@ -4,7 +4,7 @@ metadata:
   name: label-existing-namespaces
   annotations:
     policies.kyverno.io/title: Label Existing Namespaces
-    policies.kyverno.io/category: other
+    policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Namespace
     kyverno.io/kyverno-version: 1.7.0
