Change prefix for static value
Signed-off-by: enrique.lopez <enrique.lopez@avature.net>

--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -17,6 +17,7 @@ metadata:
       define permissions and users per namespace.
       Doing this developers are abstracted by administrators naming convenction and will not 
       be able to access to secrets from other namespaces.
+      In this example on patch change "prefix-" for your prefix. For example: {{ request.namespace }}
 spec:
   rules:
   - name: add-external-secret-prefix
@@ -31,7 +32,7 @@ spec:
           - path: /spec/data/{{elementIndex}}/remoteRef
             op: add
             value: {
-              "key" : "{{ request.namespace }}-{{element.remoteRef.key}}", 
+              "key" : "prefix-{{element.remoteRef.key}}", 
               "property": {{element.remoteRef.property}},
               "conversionStrategy": {{element.remoteRef.conversionStrategy}},
               "decodingStrategy": {{element.remoteRef.decodingStrategy}}
