--- a/external-secret-operator/add-external-secret-prefix/resource.yaml
+++ b/external-secret-operator/add-external-secret-prefix/resource.yaml
@@ -16,7 +16,11 @@ spec:
     remoteRef:
       key: remote-secret
       property: "name.first" # Tom
+      conversionStrategy: Default
+      decodingStrategy: None
   - secretKey: first_friend
     remoteRef:
       key: remote-secret
       property: "friends.1.first" # Roger
+      conversionStrategy: Default
+      decodingStrategy: None
