--- a/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
+++ b/external-secret-operator/add-external-secret-prefix/add-external-secret-prefix.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >- 
-      This Policy mutate secretRef key to add namespace as prefix.
+      This Policy mutates secretRef key to add a prefix.
       External Secret Operator proposes to use kyverno to force ExternalSecrets
       to have namespace prefix so that kubernetes administrators do not need to
       define permissions and users per namespace.
