feat: add update operation to the list
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/tekton/block-tekton-task-runs/block-tekton-task-runs.yaml
+++ b/tekton/block-tekton-task-runs/block-tekton-task-runs.yaml
@@ -30,8 +30,10 @@ spec:
     preconditions:
       all:
       - key: "{{ request.operation }}"
-        operator: Equals
-        value: CREATE
+        operator: AnyIn
+        value:
+        - CREATE
+        - UPDATE
     validate:
       message: Creating a TaskRun is not allowed.
       deny: {}
