--- a/pss/restricted_runAsNonRoot/policy.yaml
+++ b/pss/restricted_runAsNonRoot/policy.yaml
@@ -7,9 +7,10 @@ spec:
   rules:
   - name: restricted_runAsNonRoot
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       podSecurity:
         level: restricted
