--- a/pss/privileged-containers/policy.yaml
+++ b/pss/privileged-containers/policy.yaml
@@ -7,9 +7,10 @@ spec:
   rules:
   - name: wildcard_images_violate_true_image_not_match_wildcard
     match:
-      resources:
-        kinds:
-        - Pod
+      any:
+      - resources:
+          kinds:
+          - Pod
     validate:
       podSecurity:
         level: baseline
